[package]
name = "Logger"
version = "2.1.2"
edition = "2021"
authors = ["Tgb03<tgb03.dev@gmail.com>"]

[workspace]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
eframe = { version = "0.30.0", default-features = false, features = [
  "glow", "default_fonts" 
] }
egui = { version = "0.30.0", default-features = false, features = [
  "serde"
] }
egui_extras = "0.30.0"
pad = "0.1.6"
rfd = "0.15.1"
serde_yaml = "0.9.34"
directories = "6.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
enum_dispatch = "0.3.13"
ron = "0.8.1" 
reqwest = { version = "0.12.12", features = ["blocking"] }
opener = "0.7.2"
open = "5.3.2"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.16.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "debuginfo"
overflow-checks = false
