[workspace]
members = ["core", "gui"]
resolver = "2"

[workspace.package]
version = "2.1.13"
edition = "2021"
authors = ["Tgb03<tgb03.dev@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.10.1"
strum = "0.26.3"
strum_macros = "0.26.4"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "debuginfo"
overflow-checks = false
