[workspace]
members = ["core", "gui"]
resolver = "2"

[workspace.package]
version = "3.0.16"
edition = "2021"
authors = ["Tgb03<tgb03.dev@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.10.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
serde_json = "1.0.140"
might_sleep = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = 3
incremental = true
lto = true
strip = "symbols"
overflow-checks = false