[package]
name = "core"
version = "2.1.10"
edition = "2024"

[dependencies]
serde.workspace = true
ron.workspace = true
strum.workspace = true
strum_macros.workspace = true
bincode = "1.3.3"
directories = "6.0.0"
enum_dispatch = "0.3.13"
might_sleep = "0.2.0"
reqwest = { version = "0.12.15" , features = [
    "blocking"
]}
tempfile = "3.19.1"
